--- a/nested-labvm/atd-docker/uilanding/src/html/css/style.css
+++ b/nested-labvm/atd-docker/uilanding/src/html/css/style.css
@@ -76,3 +76,26 @@
     text-decoration: none;
     cursor: pointer;
   }
+  .collapsible {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+
+  .active, .collapsible:hover {
+    background-color: #ccc;
+  }
+
+  .content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #f1f1f1;
+  }
